k8s/cloud/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: cloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: adguard
          image: adguard/adguardhome@sha256:1ea34eafe5dc691007946e8eaab7bf46b0de9412f39213d8c06e48b53bf9a6c5
          ports:
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
            - containerPort: 8080
              name: admin
            - containerPort: 3000
              name: setup
          volumeMounts:
            - name: work
              mountPath: /opt/adguardhome/work
            - name: conf
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: work
          hostPath:
            path: /home/aadi/store/adguard-work
            type: DirectoryOrCreate
        - name: conf
          hostPath:
            path: /home/aadi/store/adguard-conf
            type: DirectoryOrCreate
