k8s/cloud/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: cloud
spec:
  selector:
    app: adguard
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: admin
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: cloud
spec:
  ingressClassName: traefik
  rules:
    - host: adguard.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 80
